<resources>
    <string name="app_name">MyChatApp</string>
    <string name="welcome_text">Welcome to WhatsApp Clone</string>
    <string name="login">Login</string>
    <string name="create_account">Create a New Account</string>
    <string name="have_account">Already Have Account</string>
    <string name="need_account">Need New Account?</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="settings_change_picture">Change Picture</string>
    <string name="settings_change_status">Change Status</string>
    <string name="send_message">Send Message</string>
    <string name="dashboard_title">Dashboard</string>
</resources>
