<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMain"
    tools:context="com.gitzblitz.mychatapp.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        android:textColor="@color/grey_100"
        android:text="@string/have_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textColor="@color/grey_100"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:text="@string/need_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</android.support.constraint.ConstraintLayout>
