<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context="com.gitzblitz.mychatapp.activities.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:id="@+id/cd"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        android:background="@color/colorAccent"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="200dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:background="@color/colorAccent"
             android:orientation="vertical"
             android:layout_height="match_parent">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Login"
                 android:textColor="#FFFF"
                 android:textStyle="bold"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="50dp"
                 android:textSize="18sp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
                 android:paddingEnd="30dp"
                 android:paddingStart="30dp">

                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loginEmailEdt"
                     android:paddingBottom="2dp"
                     android:padding="10dp"
                     android:textSize="14sp"
                     android:textColor="#f0f7f4"
                     android:hint="@string/enter_email"
                     android:textCursorDrawable="@drawable/bg_input_cursor_2"
                     android:background="@drawable/selector_bg_edit_2"
                     android:inputType="textEmailAddress"/>

                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loginPasswordEdt"
                     android:textCursorDrawable="@drawable/bg_input_cursor_2"
                     android:layout_marginTop="15dp"
                     android:padding="10dp"
                     android:textColor="#f0f7f4"
                     android:background="@drawable/selector_bg_edit_2"
                     android:hint="@string/enter_password"
                     android:textSize="14sp"
                     android:inputType="textPassword"/>
                 <Button
                     android:layout_width="150dp"
                     android:layout_height="50dp"
                     android:text="@string/login"
                     android:textColor="#D3d3d3"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="40dp"
                     android:id="@+id/loginButtonId"
                     android:stateListAnimator="@drawable/state_list_animator_z"
                     android:background="@drawable/bt_shape"/>

             </LinearLayout>

         </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
